
	* pygtk-gtkcomboboxentry.xml Add.

	* pygtk-gtkcontainer.xml Fix bug in synopsis of get_focus_chain().

	* pygtk-gtkcontainer.xml Property "child" is read-only.

	* pygtk-gtkdrawingarea.xml Tweak the description.

	* pygtk-gtkcombobox.xml 
	* pygtk-gtkcomboboxentry.xml Add gtk.CellLayout to class synopsis.

	* pygtk-gtkeditable.xml Tweak description to specify it's an interface.

2004-04-04  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcombobox.xml Add.

	* pygtk-gtkcelllayout.xml. Add.

2004-04-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcheckbutton.xml Fix formatting of Ancestry description.

	* pygtk-gtkcheckmenuitem.xml Minor reformatting.

	* pygtk-gtkcolorbutton.xml Add description of GtkColorButton in
	GTK+ 2.4 and PyGTK 2.4.

	* pygtk-gtkcombo.xml Added deprecation warning for PyGTK 2.4.

2004-04-02  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbutton.xml Added descriptions of "focus-on-click", "xalign"
	and "yalign" propertiees for GTK+ 2.4. Added descriptions of the
	set_alignment(), get_alignment(), set_focus_on_click() and
	get_focus_on_click() methods available in PyGTK 2.4

	* pygtk-gtkbuttonbox.xml Add description of get_child_secondary()
	method available in PyGTK 2.4.

	* pygtk-gtkcalendar.xml Add descriptions of get_display_options() and
	set_display_options() methods available in PyGTK 2.4. Add deprecation
	warning for display_options() method.

	* pygtk-gtkcellrenderer.xml Add description of editing_canceled()
	method available in PyGTK 2.4. Add description of "editing-canceled"
	signal available in GTK+ 2.4.

2004-04-01  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaccelgroup.xml Added descriptions of connect_by_path()
	method,	and accel_map_add_entry(), accel_map_lock_path and
	accel_map_unlock_path() functions.

	* pygtk-gtkalignment.xml Fix small bug in get_padding() description.

2004-03-31  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkalignment.xml Add description of set_padding() and