@@ -13,6 +13,10 @@
 
 	* pygtk-gtkeditable.xml Tweak description to specify it's an interface.
 
+	* pygtk-gtkentry.xml Add PyGTK 2,4 methods set_alignment(),
+	get_alignment(), set_completion(), get_completion(). Also add GTK+2.4
+	property "xalign"
+
 2004-04-04  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkcombobox.xml Add.
